<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/silver">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button1"
        android:backgroundTint="@color/silver"
        android:text="@string/_1"
        style="@style/MyButton"
        app:layout_constraintBottom_toTopOf="@id/button4"
        app:layout_constraintEnd_toStartOf="@id/button2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button6"
        android:backgroundTint="@color/silver"
        android:text="@string/_6"
        style="@style/MyButton"
        app:layout_constraintBottom_toTopOf="@id/button9"
        app:layout_constraintEnd_toStartOf="@id/button_subtraction"
        app:layout_constraintStart_toEndOf="@id/button5"
        app:layout_constraintTop_toBottomOf="@id/button3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_point"
        android:backgroundTint="@color/silver"
        android:text="@string/_point"
        style="@style/MyButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_equally"
        app:layout_constraintStart_toEndOf="@id/button0"
        app:layout_constraintTop_toBottomOf="@id/button8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button0"
        android:backgroundTint="@color/silver"
        android:text="@string/_0"
        style="@style/MyButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_point"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_addition"
        android:backgroundTint="@color/grey"
        android:text="@string/_addition"
        style="@style/MyButton"
        app:layout_constraintBottom_toTopOf="@id/button_subtraction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button9"
        android:backgroundTint="@color/silver"
        android:text="@string/_9"
        style="@style/MyButton"
        app:layout_constraintBottom_toTopOf="@id/button_equally"
        app:layout_constraintEnd_toStartOf="@id/button_divide"
        app:layout_constraintStart_toEndOf="@id/button8"
        app:layout_constraintTop_toBottomOf="@id/button6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button8"
        android:backgroundTint="@color/silver"
        android:text="@string/_8"
        style="@style/MyButton"
        app:layout_constraintBottom_toTopOf="@id/button_point"
        app:layout_constraintEnd_toStartOf="@id/button9"
        app:layout_constraintStart_toEndOf="@id/button7"
        app:layout_constraintTop_toBottomOf="@id/button5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button4"
        android:backgroundTint="@color/silver"
        android:text="@string/_4"
        style="@style/MyButton"
        app:layout_constraintBottom_toTopOf="@id/button7"
        app:layout_constraintEnd_toStartOf="@id/button5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_subtraction"
        android:backgroundTint="@color/grey"
        android:text="@string/_subtraction"
        style="@style/MyButton"
        app:layout_constraintBottom_toTopOf="@id/button_divide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button6"
        app:layout_constraintTop_toBottomOf="@id/button_addition" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button3"
        android:backgroundTint="@color/silver"
        android:text="@string/_3"
        style="@style/MyButton"
        app:layout_constraintBottom_toTopOf="@id/button6"
        app:layout_constraintEnd_toStartOf="@id/button_addition"
        app:layout_constraintStart_toEndOf="@id/button2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button7"
        android:backgroundTint="@color/silver"
        android:text="@string/_7"
        style="@style/MyButton"
        app:layout_constraintBottom_toTopOf="@id/button0"
        app:layout_constraintEnd_toStartOf="@id/button8"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_multiply"
        android:backgroundTint="@color/grey"
        android:text="@string/_multiply"
        style="@style/MyButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_equally"
        app:layout_constraintTop_toBottomOf="@id/button_divide" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_equally"
        android:backgroundTint="@color/silver"
        android:text="@string/_equally"
        style="@style/MyButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_multiply"
        app:layout_constraintStart_toEndOf="@id/button_point"
        app:layout_constraintTop_toBottomOf="@id/button9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button2"
        android:backgroundTint="@color/silver"
        android:text="@string/_2"
        style="@style/MyButton"
        app:layout_constraintBottom_toTopOf="@id/button5"
        app:layout_constraintEnd_toStartOf="@id/button3"
        app:layout_constraintStart_toEndOf="@id/button1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_divide"
        android:backgroundTint="@color/grey"
        android:text="@string/_divide"
        style="@style/MyButton"
        app:layout_constraintBottom_toTopOf="@id/button_multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button9"
        app:layout_constraintTop_toBottomOf="@id/button_subtraction" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button5"
        android:backgroundTint="@color/silver"
        android:text="@string/_5"
        style="@style/MyButton"
        app:layout_constraintBottom_toTopOf="@id/button8"
        app:layout_constraintEnd_toStartOf="@id/button6"
        app:layout_constraintStart_toEndOf="@id/button4"
        app:layout_constraintTop_toBottomOf="@id/button2" />

</androidx.constraintlayout.widget.ConstraintLayout>